examples/test/testpolicy17572.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17572
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key25: value16
      key0: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value6
      podSelector:
        matchLabels:
          key12: value40
          key11: value36
